--- a/Resources/Strings.zh-CN.resx
+++ b/Resources/Strings.zh-CN.resx
@@ -1,52 +1,110 @@
-<?xml version='1.0' encoding='utf-8'?>
-<root xmlns:ns1="urn:schemas-microsoft-com:xml-msdata" xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  
-  <xs:schema id="root">
-    <xs:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xs:element name="root" ns1:IsDataSet="true">
-      <xs:complexType>
-        <xs:choice maxOccurs="unbounded">
-          <xs:element name="metadata">
-            <xs:complexType>
-              <xs:sequence>
-                <xs:element name="value" type="xsd:string" minOccurs="0" />
-              </xs:sequence>
-              <xs:attribute name="name" use="required" type="xsd:string" />
-              <xs:attribute name="type" type="xsd:string" />
-              <xs:attribute name="mimetype" type="xsd:string" />
-              <xs:attribute ref="xml:space" />
-            </xs:complexType>
-          </xs:element>
-          <xs:element name="assembly">
-            <xs:complexType>
-              <xs:attribute name="alias" type="xsd:string" />
-              <xs:attribute name="name" type="xsd:string" />
-            </xs:complexType>
-          </xs:element>
-          <xs:element name="data">
-            <xs:complexType>
-              <xs:sequence>
-                <xs:element name="value" type="xsd:string" minOccurs="0" ns1:Ordinal="1" />
-                <xs:element name="comment" type="xsd:string" minOccurs="0" ns1:Ordinal="2" />
-              </xs:sequence>
-              <xs:attribute name="name" type="xsd:string" use="required" ns1:Ordinal="1" />
-              <xs:attribute name="type" type="xsd:string" ns1:Ordinal="3" />
-              <xs:attribute name="mimetype" type="xsd:string" ns1:Ordinal="4" />
-              <xs:attribute ref="xml:space" />
-            </xs:complexType>
-          </xs:element>
-          <xs:element name="resheader">
-            <xs:complexType>
-              <xs:sequence>
-                <xs:element name="value" type="xsd:string" minOccurs="0" ns1:Ordinal="1" />
-              </xs:sequence>
-              <xs:attribute name="name" type="xsd:string" use="required" />
-            </xs:complexType>
-          </xs:element>
-        </xs:choice>
-      </xs:complexType>
-    </xs:element>
-  </xs:schema>
+<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -453,7 +511,7 @@
     <value>最新版本</value>
   </data>
   <data name="Enabled" xml:space="preserve">
-    <value>启用</value>
+    <value>已启用</value>
   </data>
   <data name="Actions" xml:space="preserve">
     <value>操作</value>
@@ -1112,6 +1170,9 @@
   <data name="ChunkCompleted" xml:space="preserve">
     <value>块 {0} 完成: {1} 字节</value>
   </data>
+  <data name="StartingIdmDownload" xml:space="preserve">
+    <value>开始 IDM 模式下载: {0} 个块，{1} 个线程，块大小: {2} 字节</value>
+  </data>
   <data name="ChunkFailedRetrying" xml:space="preserve">
     <value>块 {0} 失败（第 {1}/{2} 次尝试），{3}毫秒后重试: {4}</value>
   </data>
@@ -1658,12 +1719,6 @@
   <data name="Reinstall" xml:space="preserve">
     <value>重装</value>
   </data>
-  <data name="TranslationPluginEnabled" xml:space="preserve">
-    <value>翻译插件已启用</value>
-  </data>
-  <data name="TranslationPluginDisabled" xml:space="preserve">
-    <value>翻译插件已禁用</value>
-  </data>
   <data name="EnableTranslationPlugin" xml:space="preserve">
     <value>启用翻译插件</value>
   </data>
@@ -1685,7 +1740,139 @@
   <data name="DownloadingTranslationRelease" xml:space="preserve">
     <value>正在下载翻译发布版本: {0}</value>
   </data>
-  <data name="TranslationPluginToggleFailed" xml:space="preserve">
-    <value>切换翻译插件失败</value>
+  <data name="TranslationUpdateAvailable" xml:space="preserve">
+    <value>有翻译更新可用</value>
+  </data>
+  <data name="CheckingTranslationUpdates" xml:space="preserve">
+    <value>正在检查翻译更新...</value>
+  </data>
+  <data name="NoTranslationUpdatesAvailable" xml:space="preserve">
+    <value>暂无翻译更新</value>
+  </data>
+  <data name="TranslationInstallationStarted" xml:space="preserve">
+    <value>开始安装翻译系统: XUnity版本 {0}</value>
+  </data>
+  <data name="TranslationUpdateCheckResult" xml:space="preserve">
+    <value>翻译更新检查 - 已安装: {0}, 最新: {1}, 有更新: {2}</value>
+  </data>
+  <data name="TranslationUpdateCheckError" xml:space="preserve">
+    <value>检查翻译更新可用性时出错</value>
+  </data>
+  <data name="TranslationReleaseTimeError" xml:space="preserve">
+    <value>获取最新翻译发布时间时出错</value>
+  </data>
+  <data name="TranslationTimestampParseError" xml:space="preserve">
+    <value>解析发布文件名时间戳失败</value>
+  </data>
+  <data name="TranslationFilesRemoved" xml:space="preserve">
+    <value>正在移除 {0} 个现有翻译文件</value>
+  </data>
+  <data name="TranslationFileRemoved" xml:space="preserve">
+    <value>已移除现有翻译文件: {0}</value>
+  </data>
+  <data name="TranslationSystemNotInstalled" xml:space="preserve">
+    <value>翻译系统尚未安装</value>
+  </data>
+  <data name="CheckForUpdates" xml:space="preserve">
+    <value>检查更新</value>
+  </data>
+  <data name="NewVersionAvailable" xml:space="preserve">
+    <value>发现新版本：</value>
+  </data>
+  <data name="ClickToDownloadAndInstall" xml:space="preserve">
+    <value>点击"检查更新"按钮进行下载并安装</value>
+  </data>
+  <data name="Filter" xml:space="preserve">
+    <value>筛选：</value>
+  </data>
+  <data name="ExportLogs" xml:space="preserve">
+    <value>导出</value>
+  </data>
+  <data name="UpdateAvailable" xml:space="preserve">
+    <value>发现更新: {0} (当前: {1})</value>
+  </data>
+  <data name="DownloadingUpdate" xml:space="preserve">
+    <value>正在下载更新: {0}</value>
+  </data>
+  <data name="UpdateDownloaded" xml:space="preserve">
+    <value>更新已下载: {0}</value>
+  </data>
+  <data name="ApplicationUpdateAvailable" xml:space="preserve">
+    <value>发现应用程序更新: {0}</value>
+  </data>
+  <data name="DownloadingUpdateProgress" xml:space="preserve">
+    <value>正在下载更新 {0} - {1}% ({2}) - {3}</value>
+  </data>
+  <data name="NoReleasesFound" xml:space="preserve">
+    <value>未找到发布版本</value>
+  </data>
+  <data name="NoStableReleasesFound" xml:space="preserve">
+    <value>未找到稳定版本</value>
+  </data>
+  <data name="NoDownloadableAsset" xml:space="preserve">
+    <value>未找到可下载的更新资源</value>
+  </data>
+  <data name="BatchUpdateTitle" xml:space="preserve">
+    <value>GHPC Mod Manager 更新</value>
+  </data>
+  <data name="BatchWaitingForClose" xml:space="preserve">
+    <value>等待应用程序关闭...</value>
+  </data>
+  <data name="BatchExtractingUpdate" xml:space="preserve">
+    <value>正在解压更新包...</value>
+  </data>
+  <data name="BatchExtractFailed" xml:space="preserve">
+    <value>解压更新包失败</value>
+  </data>
+  <data name="BatchInstallingUpdate" xml:space="preserve">
+    <value>正在安装更新...</value>
+  </data>
+  <data name="BatchCopyFailed" xml:space="preserve">
+    <value>复制更新文件失败</value>
+  </data>
+  <data name="BatchUpdateCompleted" xml:space="preserve">
+    <value>更新成功完成！</value>
+  </data>
+  <data name="BatchRestartingApp" xml:space="preserve">
+    <value>正在重启应用程序...</value>
+  </data>
+  <data name="BatchCleaningUp" xml:space="preserve">
+    <value>正在清理...</value>
+  </data>
+  <data name="UpdateChannel" xml:space="preserve">
+    <value>更新通道：</value>
+  </data>
+  <data name="UpdateChannelStable" xml:space="preserve">
+    <value>稳定版</value>
+  </data>
+  <data name="UpdateChannelBeta" xml:space="preserve">
+    <value>测试版（包含所有版本）</value>
+  </data>
+  <data name="DoYouWantToDownloadAndInstall" xml:space="preserve">
+    <value>是否要下载并安装更新？</value>
+  </data>
+  <data name="FailedToDownloadOrInstall" xml:space="preserve">
+    <value>下载或安装更新失败。请稍后重试。</value>
+  </data>
+  <data name="YouAreUsingLatestVersion" xml:space="preserve">
+    <value>您正在使用最新版本（{0}）</value>
+  </data>
+  <data name="UpdateDownloadFailed" xml:space="preserve">
+    <value>更新下载失败</value>
+  </data>
+  <data name="UpdateCancelled" xml:space="preserve">
+    <value>更新已取消</value>
+  </data>
+  <data name="UpdateInstallFailed" xml:space="preserve">
+    <value>更新安装失败</value>
+  </data>
+  <data name="TranslationPluginControl" xml:space="preserve">
+    <value>翻译插件控制</value>
+  </data>
+  <data name="PluginStatus" xml:space="preserve">
+    <value>插件状态</value>
+  </data>
+  <data name="Disabled" xml:space="preserve">
+    <value>已禁用</value>
   </data>
 </root>
